--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,8 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:4.0.0"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
+        classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:1.0.0"
+        classpath "org.jetbrains.kotlin:kotlin-allopen:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -21,6 +22,20 @@ allprojects {
     }
 }
 
+ext {
+    nav_version = '2.3.0-alpha06'
+    retrofit_version = '2.8.1'
+    moshi_version ='1.9.2'
+    kotlin_coroutines_version = '1.3.5'
+    retrofit_coroutines_adapter_version = '0.9.2'
+    ok_httpclient_version = '3.9.1'
+    dagger_version = '2.27'
+    arch_testing_version = '2.1.0'
+    mockwebserver = "3.8.1"
+    room_version = '2.2.5'
+}
+
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
