--- a/app/build.gradle
+++ b/app/build.gradle
@@ -101,5 +101,6 @@ dependencies {
 
     // Mockito framework
     androidTestImplementation 'org.mockito:mockito-core:1.10.19'
+    androidTestImplementation "org.mockito:mockito-android:$mockito_android"
 
 }
