--- a/app/build.gradle
+++ b/app/build.gradle
@@ -103,4 +103,11 @@ dependencies {
     androidTestImplementation 'org.mockito:mockito-core:1.10.19'
     androidTestImplementation "org.mockito:mockito-android:$mockito_android"
 
+
+    // glide library
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+
+    /// circle imageview library
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 }
